# Lumora

./: readme.md
.github/workflows/: pr-check-backend.yml  pr-check-client.yml  pr-to-discord.yml
Devops-Automation-Script/: .gitignore  main.py  readme.md  requirements.txt  setup.py  todo.py
Devops-Automation-Script/cli/: __init__.py  create_rds_db_creds.py
Devops-Automation-Script/tests/: test_create_rds_db_creds.py
lumora-ai/: .gitignore  pyproject.toml  requirements.txt
lumora-ai/src/hephra/: range.py  readme.md
lumora-ai/src/hephra/R1_Prep/: 01_CBC_test_lab_report  costumers.csv  data.json  data1.json  df_4_data.json  llm_data_extraction.py  llm_data_extraction_scale_10000.md  llm_data_extraction_scale_1M.md  numpy_pandas_json.py  pandas_numpy.py  test.py  test_llm_data_extraction.py  validation_tests.py
lumora-ai/src/hephra/R1_Prep/data/: type_of_medical_report.md
lumora-ai/src/hephra/R1_Prep/training/: evaluation_metrics.py
lumora-ai/src/lumora_ai/: human.py  inheritance.py  open_ai.py  requirements.txt  solution.py
lumora-ai/tests/: test_solution.py
lumora-backend/: .gitignore  AutoMapperProfile.cs  Program.cs  appsettings.Development.json  lumora-backend.csproj  lumora-backend.http
lumora-backend/Controllers/: UserController.cs
lumora-backend/Data/: DataContext.cs
lumora-client/: .gitignore  README.md  eslint.config.mjs  next.config.ts  next.env.d.ts  package-lock.json  package.json  tret.md  tsconfig.json
pipeline/: ci-pipeline.yml  pr-pipeline.yml
terraform-Iac-setup/: .gitignore  client-vpn.tf  main.tf  rds.tf  readme.md  vpc.tf
(+65 files in other folders)
